Add document reader endpoint
