# src/modules/documents/data-contracts/view-document-response.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { BaseResponse } from '../../../shared/data-contracts/base-response';
+import { DocumentDetail } from './document-detail';
+
+export class ViewDocumentResponse extends BaseResponse {
+  @ApiProperty({ type: DocumentDetail })
+  document!: DocumentDetail;
+}
